Убрал центрирование в футере на 404 странице

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: page.material
 ---
 
 <style type="text/css" media="screen">
-  .container {
+  main {
     margin: 10px auto;
     max-width: 600px;
     text-align: center;
@@ -16,9 +16,9 @@ layout: page.material
   }
 </style>
 
-<div class="container">
+<main class="container">
   <h1>404</h1>
 
   <p><strong>Страница не найдена :(</strong></p>
 
-</div>
+</main>
